traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: ';' expected but ')' found.
    if (x!=6) && (y!=6)){return true}
                       ^